--- a/components/modal/metadata/modal.yml
+++ b/components/modal/metadata/modal.yml
@@ -5,6 +5,6 @@ examples:
     name: Modal
     demoClassName: spectrum-CSSExample-example--overlay
     markup: |
-      <div class="spectrum-Modal-wrapper spectrum-CSSExample-dialog">
+      <div class="spectrum-Modal-wrapper spectrum-CSSExample-dialog spectrum-BackgroundLayers--elevated">
         <div class="spectrum-Modal is-open">This is a modal. Don't use it like this; get yourself a Modal.</div>
       </div>
