--- a/components/breadcrumb/metadata/breadcrumb.yml
+++ b/components/breadcrumb/metadata/breadcrumb.yml
@@ -35,7 +35,7 @@ examples:
           </li>
         </ul>
       </nav>
-  - id: breadcrumb
+  - id: breadcrumb-dragged
     name: Dragged
     status: Verified
     markup: |
@@ -58,7 +58,7 @@ examples:
           </li>
         </ul>
       </nav>
-  - id: breadcrumb
+  - id: breadcrumb-nested
     name: Nested
     status: Verified
     markup: |
@@ -91,7 +91,7 @@ examples:
           </li>
         </ul>
       </nav>
-  - id: breadcrumb
+  - id: breadcrumb-nested-root
     name: Nested (root visible)
     status: Verified
     markup: |
@@ -147,7 +147,7 @@ examples:
           </li>
         </ul>
       </nav>
-  - id: breadcrumb-multiline
+  - id: breadcrumb-multiline-dragged
     name: Multiline (dragged)
     status: Verified
     markup: |
@@ -170,7 +170,7 @@ examples:
           </li>
         </ul>
       </nav>
-  - id: breadcrumb-multiline
+  - id: breadcrumb-multiline-nested
     name: Multiline Nested
     status: Verified
     markup: |
@@ -203,7 +203,7 @@ examples:
           </li>
         </ul>
       </nav>
-  - id: breadcrumb-multiline
+  - id: breadcrumb-multiline-nested-root
     name: Multiline Nested (root visible)
     status: Verified
     markup: |
@@ -259,7 +259,7 @@ examples:
           </li>
         </ul>
       </nav>
-  - id: breadcrumb-compact
+  - id: breadcrumb-compact-nested
     name: Compact Nested
     status: Verified
     markup: |
@@ -292,7 +292,7 @@ examples:
           </li>
         </ul>
       </nav>
-  - id: breadcrumb-compact
+  - id: breadcrumb-compact-nested-root
     name: Compact Nested (root visible)
     status: Verified
     markup: |
